# ipython-pygments-lexers

./: SECURITY.md  ipython_pygments_lexers.py  pyproject.toml  test_ipython_pygments_lexers.py  test_pygments_lexers_ipython.py
.github/workflows/: test.yml
